--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,7 +17,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-11 col-xl-2">
-                        <h1 class="mb-0 site-logo"><a href="#" class="text-white mb-0">Tp Hotel </a></h1>
+                        <img width="350px" src="{{ asset('uploads/img/hotels/logo.png') }}" alt="">
                     </div>
                     <div class="col-12 col-md-10 d-none d-xl-block">
                         <nav class="site-navigation position-relative text-right" role="navigation">
