--- a/templates/hotel/show.twig
+++ b/templates/hotel/show.twig
@@ -9,7 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Playfair+Display:ital,wght@0,700;0,800;0,900;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ asset('build/home.css') }}">
-    <div class="hero" style="background-image: url('{{ asset('uploads/img/image1.jpg') }}');"></div>
+    {% for hotel in hotel %}
+        <div class="hero" style="background-image: url('{{ asset( 'uploads/img/hotels/') }}{{ hotel.coverImg }}');"></div>
+    {% endfor %}
     <section class="section pb-0"  >
         <div class="container">
             <div class="row check-availabilty" id="next">
@@ -79,11 +81,11 @@
                         <div class="col-md-6 col-lg-4 aos-init aos-animate mb-5" data-aos="fade-up">
                             <a href="{{ path('app_room_show', { 'suiteId': suite.id }) }}" class="room">
                                 <div class="room-img">
-                                    <img  src="{{ asset( 'uploads/img/rooms/') }}{{ suite.photo }}" alt="Free website template" class="img-fluid mb-3">
+                                    <img  src="{{ asset( 'uploads/img/rooms/') }}{{ suite.imageName }}" alt="Free website template" class="img-fluid mb-3">
                                 </div>
                                 <div class="p-3 text-center room-info">
                                     <h2 class="smallTitle">{{ hotel.name }}</h2>
-                                    <span class="text-uppercase letter-spacing-1">{{ suite.price  }}$ / per night</span>
+                                    <span class="text-uppercase letter-spacing-1">{{ '$' ~ (suite.price / 100)|number_format(2, '.', '') }}  / per night</span>
                                 </div>
                             </a>
                         </div>
