--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,6 +7,7 @@
             <link rel="stylesheet" href="{{ asset('build/main.css') }}">
             <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
             <link rel="stylesheet" href="{{ asset('bootstrap.min.css') }}">
+            <link rel="stylesheet" href="{{ asset('build/variables.css') }}">
             <link rel="stylesheet" href="{{ asset('fonts/icomoon/style.css') }} ">
 
         {% endblock %}
