booking in progress

--- a/templates/room_show/index.html.twig
+++ b/templates/room_show/index.html.twig
@@ -39,7 +39,7 @@
                             </div>
                         </div>
                     </div>
-                    <p><a href="#" class="btn btn-primary text-white py-2 mr-3">Book now</a> <span class="mr-3 font-family-serif"></span> </p>
+                    <p><a href="{{ path('book_suite', {'suite_id': suite.id}) }}" class="btn btn-primary text-white py-2 mr-3">Book now</a> <span class="mr-3 font-family-serif"></span> </p>
                 </div>
 
             </div>
